--- a/Lista 14/index.html
+++ b/Lista 14/index.html
@@ -6,6 +6,11 @@
     <title>Lista 14</title>
 </head>
 <body>
+    <h1 id="titulo">Titulo Original</h1>
+    <p id="texto">Texto Original</p>
+    <button id="button">Clique aqui</button>
+    <button id="dual"> Clique duas vezes</button>
+    <button id="passe"></button>
     <script src="dom.js"></script>
 </body>
 </html>
