--- a/Lista 14/index.html
+++ b/Lista 14/index.html
@@ -6,11 +6,35 @@
     <title>Lista 14</title>
 </head>
 <body>
-    <h1 id="titulo">Titulo Original</h1>
-    <p id="texto">Texto Original</p>
+    <h1 id="Lista 14"></h1>
+    <h2>Ex1</h2>
     <button id="button">Clique aqui</button>
-    <button id="dual"> Clique duas vezes</button>
-    <button id="passe"></button>
+    <p id="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore explicabo quisquam, eligendi totam error eos quam atque eveniet, nisi, placeat odit amet fugiat? Dolore beatae pariatur est inventore ducimus ullam.</p>
+    <h2>Ex2</h2>
+    <button id="botao">Clique aqui</button>
+    <h2>Ex3</h2>
+    <button id="dual">Clique duas vezes</button>
+    <h2>Ex4</h2>
+    <div id="paragrafo2" style="background-color: aqua; ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat possimus debitis, eius inventore reiciendis sint numquam asperiores quo aperiam necessitatibus dolores sed exercitationem? Ipsam aliquam rem quos, repellat atque vitae!</div>
+    <h2>Ex5</h2>
+    <img src="img/Design sem nome (2).png" id="potato">
+    <button id="botao3">Clique para 200x200</button>
+    <h2>Ex6</h2>
+    <img src="img/macaxera.png" id="macaxera">
+    <button id="botaoArredondar">Clique para arredondar</button>
+    <h2>Ex7</h2>
+    <div id="primeiroTexto" style="background-color: aquamarine;">
+        <p id="primeiroParagrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero corporis nobis molestiae minima incidunt consequatur inventore fugit rerum quidem minus. Quos laboriosam, ut earum possimus dignissimos unde quasi aspernatur libero?</p>
+        <button id="primeiroBotao">Clique aqui</button>
+    </div>
+    <div id="segundoTexto">
+        <p id="segundoParagrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero corporis nobis molestiae minima incidunt consequatur inventore fugit rerum quidem minus. Quos laboriosam, ut earum possimus dignissimos unde quasi aspernatur libero?</p>
+        <button id="segundoBotao">Clique aqui</button>
+    </div>
+    <div id="terceiroTexto">
+        <p id="terceiroParagrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero corporis nobis molestiae minima incidunt consequatur inventore fugit rerum quidem minus. Quos laboriosam, ut earum possimus dignissimos unde quasi aspernatur libero?</p>
+        <button id="terceiroBotao">Clique aqui</button>
+    </div>
     <script src="dom.js"></script>
 </body>
 </html>
