--- a/Lista 15/index.html
+++ b/Lista 15/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html lang="Lista 15">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista 15</title>
 </head>
 <body>
-    <img src="img/gato-gordo1.png" id="gato-gordo1">
-
-    <ul id="lista"></ul>
-        <button id="add">Adicionar item</button>
-        <button id="remove">Remover item</button>
-
+    <h2>Ex1</h2>
+    <button id="mudarCor" style="background-color: red">Clique para mudar de cor</button>
+    <h2>Ex2</h2>
+    <button id="likeClicker">Gostei!</button>
+    <p id="mostrarContador"></p>
+    <h2>Ex3</h2>
+    <ul>
+        <p id="1">Não gosto de JavaScript</p>
+        <p id="2">Não gosto de JavaScript</p>
+        <p id="3">Não gosto de JavaScript</p>
+        <p id="4">Não gosto de JavaScript</p>
+        <p id="5">Não gosto de JavaScript</p>
+    </ul>
+    <button id="mudarOpc">Mudar Opinião</button>
+    <h2>Ex4</h2>
+    <p id="msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perferendis! Sit deserunt distinctio ratione expedita unde debitis earum sed blanditiis nostrum perferendis provident suscipit, quos possimus dolor ullam alias aspernatur.</p>
+    <button id="excluirMsg">enviar mensagem</button>
+    <h2>Ex5</h2>
+    <div id="flex">
+        <p id="txt1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci illum, debitis nemo in quos incidunt quas facere! Voluptas nesciunt expedita reiciendis. Ipsum odit, sunt corrupti sit similique perferendis adipisci minima.</p>
+        <p id="txt2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, dolorem dolores? Saepe, esse earum doloribus minus dolores quis sit cumque quos eaque culpa ratione expedita tempore deserunt sunt quae corporis?</p>
+    </div>
+    <button id="altFlex">Ajustar</button>
+    <h2>Ex6</h2>
+    <div style="width: 200px; height: 200px; background-color: aqua;" id="quadrado"></div>
+    <button id="circle">Tornar circulo</button>
+    <button id="square">Tornar quadrado</button>
     <script src="dom.js"></script>
 </body>
 </html>
