--- a/Sliding puzzle - Copia/index.html
+++ b/Sliding puzzle - Copia/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sliding in SENAI</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/mundo senai1.png" type="image/x-icon">
 </head>
-<body class="body-bg">
-         <div class="header">
-            <img src="img/mundo senai1.png" alt="Logo" class="logo-img">
-        </div>
+<header>
+    <div class="header-content">
         <h1 class="logo">Sliding in SENAI</h1>
+        <p>TDS2</p>
+    </div>
+</header>
+
+<body class="body-bg">
+    <div class="container">
         <h3 id="Nivel"></h3>
         <p class="subtitle"> Ajeite o quebra-cabeça na ordem correta deslizando as peças</p>
         <div class="game-wrapper">
@@ -59,13 +62,6 @@
             </button>
         </div>
     </div>
-    <footer>
-        <div class="footer-content">
-            <p>Versão 1.6</p>
-            <p>Desenvolvido por: <strong><br>Miguel Wickboldt <br> Ana Carolina <br>Manuela Renzi <br>Matheus Souza</strong></p>
-            <p>Curso: <strong>Desenvolvimento de Sistemas</strong></p>
-        </div>
-    </footer>
     <script src="script.js"></script>
 </body>
 
