Dia de Eros (Versão 1.1)

--- a/contagem/index.html
+++ b/contagem/index.html
@@ -101,6 +101,7 @@
                 popUp.classList.remove("hidden");
                 fundo.classList.remove("hidden");
                 document.getElementById("contador").classList.add("hidden");
+                teste = false;
                 return;
             }
 
