--- a/Historia/index.html
+++ b/Historia/index.html
@@ -10,7 +10,7 @@
       color: #f0f0f0;
       padding: 20px;
     }
-    .choice {
+    .escolha {
       display: block;
       margin: 10px 0;
       padding: 10px;
@@ -20,10 +20,10 @@
       cursor: pointer;
       border-radius: 5px;
     }
-    .choice:hover {
+    .escolha:hover {
       background-color: #555;
     }
-    #story {
+    #historia {
       margin-bottom: 20px;
       font-size: 18px;
     }
@@ -31,115 +31,115 @@
 </head>
 <body>
   <h1>Shopping Morto - Jogo</h1>
-  <div id="story"></div>
-  <div id="choices"></div>
+  <div id="historia"></div>
+  <div id="escolhas"></div>
 
   <script>
-    const storyElement = document.getElementById("story");
-    const choicesElement = document.getElementById("choices");
+    const historiaElement = document.getElementById("historia");
+    const escolhasElement = document.getElementById("escolhas");
 
-    const scenes = {
+    const cenas = {
       inicio: {
-        text: "Você está preso em um shopping. Sirenes soam e gritos ecoam. Os zumbis invadiram.<br> O que você faz?",
-        choices: [
-          { text: "🏃‍♂️ Correr para a loja de esportes", next: "esportes" },
-          { text: "🛒 Esconder-se na praça de alimentação", next: "praca" }
+        texto: "Você está preso em um shopping. Sirenes soam e gritos ecoam. Os zumbis invadiram.<br> O que você faz?",
+        escolhas: [
+          { texto: "🏃‍♂️ Correr para a loja de esportes", proximaCena: "esportes" },
+          { texto: "🛒 Esconder-se na praça de alimentação", proximaCena: "praca" }
         ]
       },
       esportes: {
-        text: "Você pega um taco de beisebol e tênis novos. De repente, um zumbi aparece pela porta!",
-        choices: [
-          { text: "⚾ Atacar o zumbi", next: "atacar" },
-          { text: "🚪 Correr para a escada de incêndio", next: "escada" }
+        texto: "Você pega um taco de beisebol e tênis novos. De repente, um zumbi aparece pela porta!",
+        escolhas: [
+          { texto: "⚾ Atacar o zumbi", proximaCena: "atacar" },
+          { texto: "🚪 Correr para a escada de incêndio", proximaCena: "escada" }
         ]
       },
       praca: {
-        text: "Você se esconde atrás de uma lanchonete. Um grupo de sobreviventes aparece.",
-        choices: [
-          { text: "🤝 Juntar-se a eles", next: "grupo" },
-          { text: "🙅‍♂️ Ficar sozinho", next: "sozinho" }
+        texto: "Você se esconde atrás de uma lanchonete. Um grupo de sobreviventes aparece.",
+        escolhas: [
+          { texto: "🤝 Juntar-se a eles", proximaCena: "grupo" },
+          { texto: "🙅‍♂️ Ficar sozinho", proximaCena: "sozinho" }
         ]
       },
       atacar: {
-        text: "Você derrota o zumbi, mas chama atenção de outros! ⚠️",
-        choices: [
-          { text: "🏃 Fugir para a escada de incêndio", next: "escada" },
-          { text: "🔒 Trancar-se na loja", next: "preso" }
+        texto: "Você derrota o zumbi, mas chama atenção de outros! ⚠️",
+        escolhas: [
+          { texto: "🏃 Fugir para a escada de incêndio", proximaCena: "escada" },
+          { texto: "🔒 Trancar-se na loja", proximaCena: "preso" }
         ]
       },
       escada: {
-        text: "Você sobe correndo. No topo, encontra a saída trancada. Uma figura misteriosa aparece com uma chave.",
-        choices: [
-          { text: "👤 Confiar na pessoa", next: "confia" },
-          { text: "🔫 Ameaçar e pegar a chave à força", next: "forca" }
+        texto: "Você sobe correndo. No topo, encontra a saída trancada. Uma figura misteriosa aparece com uma chave.",
+        escolhas: [
+          { texto: "👤 Confiar na pessoa", proximaCena: "confia" },
+          { texto: "🔫 Ameaçar e pegar a chave à força", proximaCena: "forca" }
         ]
       },
       preso: {
-        text: "Você se tranca, mas não há saída. Os zumbis quebram a vitrine. 🧟‍♂️💥",
-        choices: [],
-        ending: "☠️ Final Ruim: preso e devorado."
+        texto: "Você se tranca, mas não há saída. Os zumbis quebram a vitrine. 🧟‍♂️💥",
+        escolhas: [],
+        final: "☠️ Final Ruim: preso e devorado."
       },
       grupo: {
-        text: "O grupo te aceita. Juntos, planejam uma fuga pelos dutos de ar.",
-        choices: [
-          { text: "🚷 Ir na frente", next: "duto_morte" },
-          { text: "👣 Deixar outro ir primeiro", next: "duto_fuga" }
+        texto: "O grupo te aceita. Juntos, planejam uma fuga pelos dutos de ar.",
+        escolhas: [
+          { texto: "🚷 Ir na frente", proximaCena: "duto_morte" },
+          { texto: "👣 Deixar outro ir primeiro", proximaCena: "duto_fuga" }
         ]
       },
       sozinho: {
-        text: "Você tenta se esgueirar até a saída sozinho, mas cai em uma armadilha de outro sobrevivente.",
-        choices: [],
-        ending: "☠️ Final Ruim: morto por humanos paranoicos."
+        texto: "Você tenta se esgueirar até a saída sozinho, mas cai em uma armadilha de outro sobrevivente.",
+        escolhas: [],
+        final: "☠️ Final Ruim: morto por humanos paranoicos."
       },
       confia: {
-        text: "A pessoa abre a porta e vocês escapam para o telhado, onde um helicóptero aguarda.",
-        choices: [],
-        ending: "🚁 Final Bom: fuga de helicóptero bem-sucedida!"
+        texto: "A pessoa abre a porta e vocês escapam para o telhado, onde um helicóptero aguarda.",
+        escolhas: [],
+        final: "🚁 Final Bom: fuga de helicóptero bem-sucedida!"
       },
       forca: {
-        text: "Você consegue a chave, mas a figura misteriosa atira em você. Você abre a porta ferido.",
-        choices: [],
-        ending: "🩸 Final Neutro: escapou, mas gravemente ferido."
+        texto: "Você consegue a chave, mas a figura misteriosa atira em você. Você abre a porta ferido.",
+        escolhas: [],
+        final: "🩸 Final Neutro: escapou, mas gravemente ferido."
       },
       duto_morte: {
-        text: "O duto cede com seu peso. Você cai no meio de zumbis famintos.",
-        choices: [],
-        ending: "☠️ Final Ruim: morte dolorosa nos dutos."
+        texto: "O duto cede com seu peso. Você cai no meio de zumbis famintos.",
+        escolhas: [],
+        final: "☠️ Final Ruim: morte dolorosa nos dutos."
       },
       duto_fuga: {
-        text: "O outro sobrevive, e te puxa com segurança. Vocês escapam pelos fundos do shopping.",
-        choices: [],
-        ending: "🚪 Final Bom: fuga bem-sucedida com aliados."
+        texto: "O outro sobrevive, e te puxa com segurança. Vocês escapam pelos fundos do shopping.",
+        escolhas: [],
+        final: "🚪 Final Bom: fuga bem-sucedida com aliados."
       }
     };
 
-    function showScene(key) {
-      const scene = scenes[key];
-      storyElement.innerHTML = scene.text;
-      choicesElement.innerHTML = "";
+    function mostrarCena(key) {
+      const scene = cenas[key];
+      historiaElement.innerHTML = scene.texto;
+      escolhasElement.innerHTML = "";
 
-      if (scene.ending) {
-        const endText = document.createElement("p");
-        endText.innerHTML = `<strong>${scene.ending}</strong>`;
-        choicesElement.appendChild(endText);
+      if (scene.final) {
+        const finalizarTexto = document.createElement("p");
+        finalizarTexto.innerHTML = `<strong>${scene.final}</strong>`;
+        escolhasElement.appendChild(finalizarTexto);
 
         const restartBtn = document.createElement("button");
-        restartBtn.className = "choice";
-        restartBtn.textContent = "🔁 Jogar Novamente";
-        restartBtn.onclick = () => showScene("inicio");
-        choicesElement.appendChild(restartBtn);
+        restartBtn.className = "escolha";
+        restartBtn.textoContent = "🔁 Jogar Novamente";
+        restartBtn.onclick = () => mostrarCena("inicio");
+        escolhasElement.appendChild(restartBtn);
         return;
       }
 
-      scene.choices.forEach(choice => {
+      scene.escolhas.forEach(escolha => {
         const btn = document.createElement("button");
-        btn.className = "choice";
-        btn.textContent = choice.text;
-        btn.onclick = () => showScene(choice.next);
-        choicesElement.appendChild(btn);
+        btn.className = "escolha";
+        btn.textoContent = escolha.texto;
+        btn.onclick = () => mostrarCena(escolha.proximaCena);
+        escolhasElement.appendChild(btn);
       });
     }
-    showScene("inicio");
+    mostrarCena("inicio");
   </script>
 </body>
 </html>
